--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+    id "androidx.navigation.safeargs.kotlin"
 }
 
 android {
@@ -39,6 +41,10 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.3.3"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     def lifecycle_version = "2.2.0"
     def room_version = "2.2.6"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
